--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "morgan": "^1.5.2",
-    "express": "^4.12.3"
+    "ejs-mate": "^2.1.0",
+    "express": "^4.12.3",
+    "morgan": "^1.5.2"
   },
   "devDependencies": {},
   "scripts": {
